Resolve "Zoom on images"
Squashed commit of the following:

* add releasenote

* zoom: only get images from article content

* zoom image on click

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -213,6 +213,37 @@ img {
     max-width: 100%;
 }
 
+#imgzoom {
+    background: rgba(0, 0, 0, 0.5);
+
+    display: flex;
+    align-items: center;
+
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 99;
+
+    width: 100%;
+    height: 100%;
+
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity ease 0.4s;
+}
+
+#imgzoom.show {
+    visibility: visible;
+    opacity: 1;
+}
+
+#imgzoom img {
+    width: 90%;
+    height: 90%;
+    margin: auto;
+    object-fit: contain;
+}
+
 figure {
     text-align: center;
 }
